--- a/destino.html
+++ b/destino.html
@@ -12,8 +12,8 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Inicio</a></li>
-            <li><a href="#">Dicas</a></li>
+            <li><a href="index.html">Inicio</a></li>
+            <li><a href="cartao.html">Cartões Postais</a></li>
             <li><a href="#">Sobre Mim</a></li>
         </ul>
     </nav>
