--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <ul>
             <li><a href="#">Inicio</a></li>
             <li><a href="destino.html">Destino</a></li>
-            <li><a href="#">Dicas</a></li>
+            <li><a href="cartao.html">Cartões Postais</a></li>
             <li><a href="#">Sobre Mim</a></li>
         </ul>
     </nav>
